--- a/My6705 .NET Framework 4.5/My6705 .NET Framework 4.5.csproj
+++ b/My6705 .NET Framework 4.5/My6705 .NET Framework 4.5.csproj
@@ -119,6 +119,7 @@
     <Compile Include="DriverTest.Designer.cs">
       <DependentUpon>DriverTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="HomeHandler.cs" />
     <Compile Include="KeyboardControl.cs" />
     <Compile Include="LegacyDriverLogic.cs" />
     <Compile Include="6705\Graph.cs" />
