--- a/My6705 .NET Framework 4.5/My6705 .NET Framework 4.5.csproj
+++ b/My6705 .NET Framework 4.5/My6705 .NET Framework 4.5.csproj
@@ -113,10 +113,10 @@
     <Compile Include="DLL\InterpolationController.cs" />
     <Compile Include="DLL\AxesController.cs" />
     <Compile Include="DLL\BoardActionPerformer.cs" />
-    <Compile Include="DriverTest.cs">
+    <Compile Include="DriverTest\DriverTest.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DriverTest.Designer.cs">
+    <Compile Include="DriverTest\DriverTest.Designer.cs">
       <DependentUpon>DriverTest.cs</DependentUpon>
     </Compile>
     <Compile Include="HomeHandler.cs" />
@@ -136,6 +136,7 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="DriverTest\PairOfCoordinates.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="6705\TestData.cs" />
@@ -158,7 +159,7 @@
     <EmbeddedResource Include="ConfigSetup.resx">
       <DependentUpon>ConfigSetup.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DriverTest.resx">
+    <EmbeddedResource Include="DriverTest\DriverTest.resx">
       <DependentUpon>DriverTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="IOSetup.resx">
