--- a/My6705 .NET Framework 4.5/My6705 .NET Framework 4.5.csproj
+++ b/My6705 .NET Framework 4.5/My6705 .NET Framework 4.5.csproj
@@ -96,6 +96,8 @@
   <ItemGroup>
     <Compile Include="6705\Axes.cs" />
     <Compile Include="BoardControl.cs" />
+    <Compile Include="WireTest\BreakTest.cs" />
+    <Compile Include="WireTest\COMPort.cs" />
     <Compile Include="DLL\Board.cs" />
     <Compile Include="ComGraph.cs">
       <SubType>Form</SubType>
@@ -140,7 +142,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="6705\TestData.cs" />
-    <Compile Include="WireTest\Tests.cs" />
+    <Compile Include="WireTest\ShearTest.cs" />
+    <Compile Include="WireTest\StretchTest.cs" />
+    <Compile Include="WireTest\TestHandler.cs" />
+    <Compile Include="WireTest\Test.cs" />
     <Compile Include="TestsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -152,6 +157,12 @@
     </Compile>
     <Compile Include="VelocitySetup.Designer.cs">
       <DependentUpon>VelocitySetup.cs</DependentUpon>
+    </Compile>
+    <Compile Include="WireTest\WireTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WireTest\WireTest.Designer.cs">
+      <DependentUpon>WireTest.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="ComGraph.resx">
       <DependentUpon>ComGraph.cs</DependentUpon>
@@ -183,6 +194,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VelocitySetup.resx">
       <DependentUpon>VelocitySetup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WireTest\WireTest.resx">
+      <DependentUpon>WireTest.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
