--- a/My6705 .NET Framework 4.5/My6705 .NET Framework 4.5.csproj
+++ b/My6705 .NET Framework 4.5/My6705 .NET Framework 4.5.csproj
@@ -95,6 +95,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="6705\Axes.cs" />
+    <Compile Include="DriverTest\DriverTestTickers.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DriverTest\FormInterfaceController.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="TestPosition.cs" />
     <Compile Include="WireTest\BreakTest.cs" />
     <Compile Include="WireTest\COMPort.cs" />
@@ -136,7 +142,6 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="DriverTest\PairOfCoordinates.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="6705\TestData.cs" />
