--- a/My6705 .NET Framework 4.5/My6705 .NET Framework 4.5.csproj
+++ b/My6705 .NET Framework 4.5/My6705 .NET Framework 4.5.csproj
@@ -56,8 +56,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AdvMotAPI">
-      <HintPath>D:\Utilities\Common Motion\Public\AdvMotAPI.dll</HintPath>
+    <Reference Include="AdvMotAPI, Version=2.0.9.4, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\_Дима\Common Motion\Public\AdvMotAPI.dll</HintPath>
     </Reference>
     <Reference Include="DirectShowLib, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -103,16 +104,16 @@
     <Compile Include="DriverTest\FormInterfaceController.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TestPosition.cs" />
-    <Compile Include="WireTest\BreakTest.cs" />
-    <Compile Include="WireTest\COMPort.cs" />
-    <Compile Include="DLL\Board.cs" />
-    <Compile Include="ComGraph.cs">
+    <Compile Include="MainForm\Home.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ComGraph.Designer.cs">
-      <DependentUpon>ComGraph.cs</DependentUpon>
+    <Compile Include="6705\TestConditions.cs" />
+    <Compile Include="WireTest\Graph.cs">
+      <SubType>Form</SubType>
     </Compile>
+    <Compile Include="WireTest\TestClass\BreakTest.cs" />
+    <Compile Include="WireTest\COMPort.cs" />
+    <Compile Include="DLL\Board.cs" />
     <Compile Include="6705\ComPort.cs" />
     <Compile Include="ConfigSetup.cs">
       <SubType>Form</SubType>
@@ -127,7 +128,6 @@
     <Compile Include="DriverTest\DriverTest.Designer.cs">
       <DependentUpon>DriverTest.cs</DependentUpon>
     </Compile>
-    <Compile Include="HomeHandler.cs" />
     <Compile Include="KeyboardControl.cs" />
     <Compile Include="LegacyDriverLogic.cs" />
     <Compile Include="6705\Graph.cs" />
@@ -138,20 +138,22 @@
       <DependentUpon>IOSetup.cs</DependentUpon>
     </Compile>
     <Compile Include="6705\Machine.cs" />
-    <Compile Include="Main.cs">
+    <Compile Include="MainForm\Main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main.Designer.cs">
+    <Compile Include="MainForm\Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="6705\TestData.cs" />
+    <Compile Include="WireTest\FormInterfaceController.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="WireTest\GraphHandler.cs" />
-    <Compile Include="WireTest\ShearTest.cs" />
-    <Compile Include="WireTest\StretchTest.cs" />
-    <Compile Include="WireTest\TestHandler.cs" />
-    <Compile Include="WireTest\Test.cs" />
+    <Compile Include="WireTest\TestClass\ShearTest.cs" />
+    <Compile Include="WireTest\TestClass\StretchTest.cs" />
+    <Compile Include="WireTest\TestClass\Test.cs" />
     <Compile Include="TestsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -170,9 +172,6 @@
     <Compile Include="WireTest\WireTest.Designer.cs">
       <DependentUpon>WireTest.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ComGraph.resx">
-      <DependentUpon>ComGraph.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="ConfigSetup.resx">
       <DependentUpon>ConfigSetup.cs</DependentUpon>
     </EmbeddedResource>
@@ -182,7 +181,7 @@
     <EmbeddedResource Include="IOSetup.resx">
       <DependentUpon>IOSetup.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Main.resx">
+    <EmbeddedResource Include="MainForm\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
