--- a/My6705 .NET Framework 4.5/packages.config
+++ b/My6705 .NET Framework 4.5/packages.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AForge" version="2.2.5" targetFramework="net45" />
-  <package id="AForge.Video" version="2.2.5" targetFramework="net45" />
+  <package id="CsvHelper" version="30.0.1" targetFramework="net45" />
   <package id="DirectShowLib.Standard" version="2.1.0" targetFramework="net45" />
   <package id="EMGU.CV" version="4.1.1.3497" targetFramework="net45" />
-  <package id="EmguCV" version="3.1.0.1" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net45" />
   <package id="OpenTK" version="1.1.2225.0" targetFramework="net45" />
   <package id="OpenTK.GLControl" version="1.1.2225.0" targetFramework="net45" />
-  <package id="SharpDX" version="4.2.0" targetFramework="net45" />
-  <package id="SharpDX.DirectInput" version="4.2.0" targetFramework="net45" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net45" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net45" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net48" />
 </packages>
