--- a/My6705 .NET Framework 4.5/My6705 .NET Framework 4.5.csproj
+++ b/My6705 .NET Framework 4.5/My6705 .NET Framework 4.5.csproj
@@ -125,6 +125,7 @@
     <Compile Include="WireTest\Graph.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="WireTest\SerializedTest.cs" />
     <Compile Include="WireTest\TestClass\BreakTest.cs" />
     <Compile Include="WireTest\COMPort.cs" />
     <Compile Include="DLL\Board.cs" />
